# ACMX2

./: CMakeLists.txt  README.md  acmx.cpp  audio.cpp  audio.hpp  audio_transfer.cpp  ffwrite.cpp  ffwrite.hpp  keyinfo.html  mxwrite.hpp  version_info.hpp
MXWrite/: CMakeLists.txt  MXWriteConfig.cmake.in  README.md  mxwrite.cpp  mxwrite.hpp
MXWrite/opencv_example/: opencv_ex.cpp
data/: vertex.glsl
examples/: index.txt
interface/: CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  audio-window.cpp  audio-window.hpp  console.cpp  console.hpp  editor.cpp  editor.hpp  interface.pro  main.cpp  main_window.cpp  main_window.hpp  moc_audio-window.cpp  moc_editor.cpp  moc_main_window.cpp  moc_prop.cpp  moc_settings.cpp  moc_shader.cpp  moc_shaderlibrary.cpp  moc_syntax.cpp  prop.cpp  prop.hpp  settings.cpp  settings.hpp  shader.cpp  shaderlibrary.cpp  shaderlibrary.hpp  shaderpass.cpp  shaderpass.hpp  stylesheet.qss  syntax.cpp  system.log.txt  version_info.hpp
interface/data/: vert.glsl  vertex.glsl
macos/: README.md  build-macos.sh  install.sh
models/: compress.py  cone.mxmod  hourglass_pyramid.mxmod  skybox1.mxmod  sphere_pillar.mxmod
models/compressed/: hourglass_pyramid.mxmod.z  large_hex.mxmod.z  sphere_pillar.mxmod.z
shader.packs/: README.md
shader_generator/: Makefile  gencode.cpp  mx2-ollama.cpp
